--- a/assets/style1.css
+++ b/assets/style1.css
@@ -46,3 +46,13 @@ li{
     justify-content: space-between;
     padding-bottom: 5px;
 }
+.banner{
+    background-image: url('..assests/seller-banner.png');
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+}
