--- a/assets/style1.css
+++ b/assets/style1.css
@@ -19,7 +19,7 @@ body{
 }
 a{
     text-decoration: none;
-    color: #060606;
+    color: #060606!important;
 }
 a:hover{
     color: #ff0000;
@@ -51,8 +51,4 @@ li{
     background-size: cover;
     background-position: center;
     height: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
 }
