add !important to link hover color for consistency

--- a/assets/style1.css
+++ b/assets/style1.css
@@ -22,7 +22,7 @@ a{
     color: #060606!important;
 }
 a:hover{
-    color: #ff0000;
+    color: #ff0000!important;
     transition: 0.5s;
 }
 .menubar{
