--- a/assets/style1.css
+++ b/assets/style1.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif!important;
 }
 .top-section{
     padding-top: 10px;
