--- a/assets/style1.css
+++ b/assets/style1.css
@@ -51,3 +51,8 @@ li{
     padding-top: 120px;
     padding-bottom: 120px;
 }
+.banner-heading{
+    font-size: 50px;
+    font-weight: 700;
+    color: #ffffff;
+}
