--- a/assets/style1.css
+++ b/assets/style1.css
@@ -51,9 +51,9 @@ li{
     padding-top: 120px;
     padding-bottom: 120px;
 }
-.banner-heading{
-    font-size: 50px;
-    font-weight: 700;
+h4{
     padding-top: -90px;
+    font-size: 20px;
+    font-weight: 700;
     color: #000000;
 }
