--- a/assets/style1.css
+++ b/assets/style1.css
@@ -57,3 +57,12 @@ h4{
     font-weight: 700;
     color: #ff0000;
 }
+.btn-danger{
+    background-color: #ff0000;
+    border: 1px solid #ff0000;
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 40px!important;
+    font-size: 16px;
+    font-weight: 600;
+}
