--- a/assets/style1.css
+++ b/assets/style1.css
@@ -66,3 +66,17 @@ h4{
     font-size: 16px;
     font-weight: 600;
 }
+.btn-light{
+    background-color: #ffffff;
+    border: 1px solid #ff0000;
+    color: #ff0000;
+    padding: 10px 20px;
+    border-radius: 40px!important;
+    font-size: 16px;
+    font-weight: 600;
+}
+.btn-light:hover{
+    background-color: #ff0000!important;
+    color: #ffffff!important;
+    transition: 0.5s;
+}
