--- a/assets/style1.css
+++ b/assets/style1.css
@@ -52,7 +52,6 @@ li{
     padding-bottom: 120px;
 }
 h4{
-    padding-top: -90px;
     font-size: 20px;
     font-weight: 700;
     color: #ff0000;
@@ -67,8 +66,8 @@ h4{
     font-weight: 600;
 }
 .btn-light{
-    background-color: #ffffff;
-    border: 1px solid #ff0000;
+    background-color: #ffffff!important;
+    border: 1px solid #ff0000!important;
     color: #ff0000;
     padding: 10px 20px;
     border-radius: 40px!important;
