--- a/assets/style1.css
+++ b/assets/style1.css
@@ -56,7 +56,7 @@ h4{
     font-weight: 700;
     color: #ff0000;
 }
-.btn-danger{
+.btn>btn-danger{
     background-color: #ff0000;
     border: 1px solid #ff0000;
     color: #ffffff;
@@ -65,7 +65,7 @@ h4{
     font-size: 16px;
     font-weight: 600;
 }
-.btn-light{
+.btn>btn-light{
     background-color: #ffffff!important;
     border: 1px solid #ff0000!important;
     color: #ff0000;
