fix: correct selectors for .btn-danger and .btn-light styles

--- a/assets/style1.css
+++ b/assets/style1.css
@@ -56,7 +56,7 @@ h4{
     font-weight: 700;
     color: #ff0000;
 }
-.btn>btn-danger{
+.btn-danger{
     background-color: #ff0000;
     border: 1px solid #ff0000;
     color: #ffffff;
@@ -65,10 +65,10 @@ h4{
     font-size: 16px;
     font-weight: 600;
 }
-.btn>btn-light{
+.btn-light{
     background-color: #ffffff!important;
     border: 1px solid #ff0000!important;
-    color: #ff0000;
+    color: #ff0000!important;
     padding: 10px 20px;
     border-radius: 40px!important;
     font-size: 16px;
