--- a/assets/style1.css
+++ b/assets/style1.css
@@ -78,7 +78,5 @@ h4{
     transition: 0.5s;
 }
 .banner-heading{
-    color: #ff0000;
-    font-size: 40px;
-    font-weight: 600;
+    padding-top: -90px;
 }
