--- a/assets/style1.css
+++ b/assets/style1.css
@@ -75,8 +75,53 @@ li{
     transition: 0.5s;
 }
 .banner-heading{
-    padding-top: -90px;
+    font-size: 36px!important;
+    color: black!important;
+    font-weight: 550!important;
+    text-align: center!important;
 }
-.btn{
-    border-radius: 40px!important;
+.banner-bottom{
+    padding-top : 50px;
+    padding-bottom: 100px;
+}
+.check{
+    color: #ffffff;
+    background-color: #ff0000;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+.check h1{
+    font-size: 36px;
+    font-weight: 600;
+    padding-left: 20px;
+    text-align: center;
+}
+.check h5{
+    font-size: 24px;
+    font-weight: 400;
+    padding-left: 20px;
+    text-align: center;
+}
+.tabs{
+    padding-top: 30px;
+    padding-bottom: 50px;
+    text-align: center;
+}
+.tabs h2{
+    font-size: 36px;
+    font-weight: 600;
+}
+.list-group{
+ font-size: 20px;
+ font-weight: 600px;   
+ border-left: 1px solid #bbbbbb;
+}
+.list-group-item{
+    background-color: #ffffff!important;
+}
+.list-group-item:hover{
+    background-color: #ff0000!important;
+    color: #ffffff!important;
+    font-weight: 800px!important;
+    transition: 0.5s;
 }
