--- a/assets/style1.css
+++ b/assets/style1.css
@@ -126,13 +126,106 @@ li{
     transition: 0.5s;
 }
 .slider{
-    background-color: #e1dddd;
-    padding-top: 50px;
+    background-color: #f7f1f1;
+    padding-top: 30px;
     padding-bottom: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
     text-align: center;
 }
 .slider h2{
     color: #ad0000;
     font-size: 48px;
     font-weight: 600px;
+}
+.carousel-control-prev{
+    width: 10%!important;
+    color: #ff0000!important;
+    font-size: 30px; 
+}
+.carousel-control-next{
+    width: 10%!important;
+    color: #ff0000!important;
+    font-size: 30px;
+}
+.carousel-inner{
+    background-color: #ffffff;
+}
+.footer-banner{
+    background-image: url("../assets/footer-banner.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 90px;
+    padding-bottom: 130px;
+    justify-content: center;
+    background-color: #ff0000;
+    color: #ffffff;
+}
+.footer-text{
+    text-align: center;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.footer-btn{
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+}
+.footer-section{
+    background-color: #000000;
+}
+.footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.footer-link{
+    color: #ffffff;
+}
+.link-section h5{
+    color: #ffffff;
+}
+.contact-section h5{
+    color: #ffffff;
+}
+.copyright{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.float-1{
+    padding-top: 4px;
+    width: 200px;
+    color: #ffffff;
+    background-color: #ff0000!important;
+    border-radius: 40px;
+}
+.float-1{
+	position:fixed;
+    padding-top: 4px;
+	width:200px;
+	height:30px;
+	bottom:90px;
+	right:40px;
+	background-color:#ff0000;
+	color: #fff !important;;
+	border-radius:50px;
+	text-align:center;
+}
+#float-icon-1:hover{
+    color: #d2d2d2!important;
+}
+.float{
+	position:fixed;
+    padding-top: 4px;
+	width:200px;
+	height:30px;
+	bottom:50px;
+	right:40px;
+	background-color:#ff0000;
+	color: #fff !important;;
+	border-radius:50px;
+	text-align:center;
 }
