fix: add padding to copyright section in style1.css

--- a/assets/style1.css
+++ b/assets/style1.css
@@ -191,6 +191,7 @@ li{
     color: #ffffff;
 }
 .copyright{
+    padding-top: 15px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
